--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
+  padding: 0;
+  margin: 0;
+  border-radius: 100px;
+  text-align: -webkit-right;
+  font-weight: bold;
+  height: 100vh;
+  background-position: left;
+  text-transform: capitalize;
+  word-spacing: 20px;
+  letter-spacing: 2px;
+  line-height: 20px;
+}
+
+.VideoList {
+  color: coral;
+}
+
+h2 {
+  color: blueviolet;
+  margin: 20px 20px 20px 50px;
   text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+  'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  color: brown;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App {
+  background-image: url("https://kidpassage.com/images/publications/images/dubay-aprele-otdyh-pogoda-photo1.jpg");
+  background-repeat: no-repeat;
+  background-position: left;
+  position: relative;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
